# artful

./: .gitignore  Cargo.toml  README.md
src/: art.rs  leaf.rs  lib.rs  node.rs  node16.rs  node256.rs  node4.rs  node48.rs  simd.rs
tests/: data.rs
