[package]
name = "artful"
version = "0.1.1"
authors = ["Jackson Xu <jackson.libc.rs@gmail.com>"]
description = "Low-memory overhead and high-performance adaptive radix tree"
keywords = ["radix-tree","adaptive-radix-tree", "performance", "simd"]
categories = ["data-structures"] # see https://crates.io/category_slugs
exclude = []
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
documentation="https://docs.rs/artful"

[features]
simd = []

[dependencies]
